--- a/dancefloor.html
+++ b/dancefloor.html
@@ -13,8 +13,11 @@
     <div class="topbar">
       <span class="title">object dance party</span>
       <a href="#" class="addDancerButton" data-dancer-maker-function-name="makeBlinkyDancer">add a blinky dancer</a>    
-     <a href="#" class="addDancerButton" data-dancer-maker-function-name="jumpingDancer">add a jumping dancer</a> 
+     <a href="#" class="addDancerButton" data-dancer-maker-function-name="jumpingDancer">add a jumping dancer</a>
+     <a href="#" class="lineUpButton">Line up</a>  
     </div>
+    <div class="position-floor" ></div>
+
     <script src="src/init.js"></script>
   </body>
 </html>
