dancers bust a move on hover

--- a/dancefloor.html
+++ b/dancefloor.html
@@ -16,7 +16,7 @@
      <a href="#" class="addDancerButton" data-dancer-maker-function-name="jumpingDancer">add a jumping dancer</a>
      <a href="#" class="lineUpButton">Line up</a>  
     </div>
-    <div class="position-floor" ></div>
+    <!-- <div class="position-floor" ></div> -->
 
     <script src="src/init.js"></script>
   </body>
