--- a/dancefloor.html
+++ b/dancefloor.html
@@ -8,12 +8,17 @@
     <script src="src/dancer.js"></script>
     <script src="src/blinkyDancer.js"></script>
     <script src="src/jumpingDancer.js"></script>
+    <script src="src/carrotDancer.js"></script>
+  <link type="text/css" href="css/themename/jquery-ui-1.7.1.custom.css" rel="Stylesheet" />   
+ 
+  <script type="text/javascript" src="js/jquery-ui-1.7.1.custom.min.js"></script>
   </head>
   <body>
     <div class="topbar">
       <span class="title">object dance party</span>
       <a href="#" class="addDancerButton" data-dancer-maker-function-name="makeBlinkyDancer">add a blinky dancer</a>    
      <a href="#" class="addDancerButton" data-dancer-maker-function-name="jumpingDancer">add a jumping dancer</a>
+    <a href="#" class="addDancerButton" data-dancer-maker-function-name="carrotDancer">add a carrot dancer</a>
      <a href="#" class="lineUpButton">Line up</a>  
     </div>
     <!-- <div class="position-floor" ></div> -->
